--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PEEZE - Non-Toxic Gaming Excellence</title>
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" sizes="32x32" href="media/favicon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="media/favicon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="media/favicon.png">
+    <link rel="shortcut icon" href="media/favicon.png">
+    <meta name="msapplication-TileImage" content="media/favicon.png">
+    <meta name="msapplication-TileColor" content="#FFC72C">
+
+    <!-- Fonts -->    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
