--- a/index.html
+++ b/index.html
@@ -140,103 +140,95 @@
                 <p>Lernt die Spieler kennen, die Peeze mit Skill und Fairness repräsentieren</p>
             </div>
             <div class="team-grid">
-                <div class="player-card">
-                    <div class="player-image">
-                        <img src="https://cdn.fastly.steamstatic.com/steamcommunity/public/images/items/2459330/11f793d568e758d50ec1e399cc0357528872efb9.gif" alt="FrostyLino" class="player-avatar-img">
+                <!-- FrostyLino -->
+                <div class="player-card" data-profile-url="https://csst.at/profile/76561198097389274">
+                    <div class="player-avatar">
+                        <img src="https://cdn.fastly.steamstatic.com/steamcommunity/public/images/items/2459330/11f793d568e758d50ec1e399cc0357528872efb9.gif" alt="FrostyLino" loading="lazy">
                         <div class="player-country">🇩🇪</div>
                     </div>
                     <div class="player-info">
-                        <h3>FrostyLino</h3>
-                        <div class="player-role">Rifler & Support</div>
+                        <h3 class="player-name">FrostyLino</h3>
+                        <p class="player-role">Rifler & Support</p>
                         <div class="player-stats">
-                            <div class="stat-item">
-                                <span class="stat-value">1.18</span>
-                                <span class="stat-label">K/D</span>
-                            </div>
-                            <div class="stat-item">
-                                <span class="stat-value">69%</span>
-                                <span class="stat-label">HS</span>
-                            </div>
-                            <div class="stat-item">
-                                <span class="stat-value">84%</span>
-                                <span class="stat-label">Clutch Success</span>
-                            </div>
+                            <span class="stat">1.15 K/D</span>
+                            <span class="stat">68% HS</span>
+                            <span class="stat">82% Clutch Success</span>
                         </div>
+                    </div>
+                    <div class="click-indicator">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M7 17L17 7M17 7H7M17 7V17"/>
+                        </svg>
+                        View Stats
                     </div>
                 </div>
 
-                <div class="player-card">
-                    <div class="player-image">
-                        <img src="https://avatars.akamai.steamstatic.com/32872eb2b37ed79c94a83ec23a3cff42f4c0dfa5_full.jpg" alt="Tröte" class="player-avatar-img">
+                <!-- Tröte -->
+                <div class="player-card" data-profile-url="https://csst.at/profile/76561197963821576">
+                    <div class="player-avatar">
+                        <img src="https://avatars.akamai.steamstatic.com/32872eb2b37ed79c94a83ec23a3cff42f4c0dfa5_full.jpg" alt="Tröte" loading="lazy">
                         <div class="player-country">🇩🇪</div>
                     </div>
                     <div class="player-info">
-                        <h3>Tröte</h3>
-                        <div class="player-role">IGL & Entry Fragger</div>
+                        <h3 class="player-name">Tröte</h3>
+                        <p class="player-role">IGL & Entry Fragger</p>
                         <div class="player-stats">
-                            <div class="stat-item">
-                                <span class="stat-value">1.24</span>
-                                <span class="stat-label">K/D</span>
-                            </div>
-                            <div class="stat-item">
-                                <span class="stat-value">72%</span>
-                                <span class="stat-label">HS</span>
-                            </div>
-                            <div class="stat-item">
-                                <span class="stat-value">91%</span>
-                                <span class="stat-label">IGL Success</span>
-                            </div>
+                            <span class="stat">1.22 K/D</span>
+                            <span class="stat">71% HS</span>
+                            <span class="stat">89% Round Win as IGL</span>
                         </div>
+                    </div>
+                    <div class="click-indicator">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M7 17L17 7M17 7H7M17 7V17"/>
+                        </svg>
+                        View Stats
                     </div>
                 </div>
 
-                <div class="player-card">
-                    <div class="player-image">
-                        <img src="https://shared.akamai.steamstatic.com/community_assets/images/items/1868140/fb94407292c01b2fe9fd1e3b469aeeb6a37463b5.gif" alt="JBH" class="player-avatar-img">
+                <!-- JBH -->
+                <div class="player-card" data-profile-url="https://csst.at/profile/76561199512052565">
+                    <div class="player-avatar">
+                        <img src="https://shared.akamai.steamstatic.com/community_assets/images/items/1868140/fb94407292c01b2fe9fd1e3b469aeeb6a37463b5.gif" alt="JBH" loading="lazy">
                         <div class="player-country">🇩🇪</div>
                     </div>
                     <div class="player-info">
-                        <h3>JBH</h3>
-                        <div class="player-role">Entry Fragger & Trader</div>
+                        <h3 class="player-name">JBH</h3>
+                        <p class="player-role">Entry Fragger & Trader</p>
                         <div class="player-stats">
-                            <div class="stat-item">
-                                <span class="stat-value">1.21</span>
-                                <span class="stat-label">K/D</span>
-                            </div>
-                            <div class="stat-item">
-                                <span class="stat-value">74%</span>
-                                <span class="stat-label">HS</span>
-                            </div>
-                            <div class="stat-item">
-                                <span class="stat-value">79%</span>
-                                <span class="stat-label">Entry Success</span>
-                            </div>
+                            <span class="stat">1.19 K/D</span>
+                            <span class="stat">73% HS</span>
+                            <span class="stat">77% Entry Success</span>
                         </div>
+                    </div>
+                    <div class="click-indicator">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M7 17L17 7M17 7H7M17 7V17"/>
+                        </svg>
+                        View Stats
                     </div>
                 </div>
 
-                <div class="player-card">
-                    <div class="player-image">
-                        <img src="https://shared.akamai.steamstatic.com/community_assets/images/items/1658150/11d1833971e3b8648740b245d3abc6e9a8491cae.gif" alt="Yurj" class="player-avatar-img">
+                <!-- yruj -->
+                <div class="player-card" data-profile-url="https://csst.at/profile/76561199454947896">
+                    <div class="player-avatar">
+                        <img src="https://shared.akamai.steamstatic.com/community_assets/images/items/1658150/11d1833971e3b8648740b245d3abc6e9a8491cae.gif" alt="yruj" loading="lazy">
                         <div class="player-country">🇩🇪</div>
                     </div>
                     <div class="player-info">
-                        <h3>Yurj</h3>
-                        <div class="player-role">Primary AWPer</div>
+                        <h3 class="player-name">yruj</h3>
+                        <p class="player-role">Primary AWPer</p>
                         <div class="player-stats">
-                            <div class="stat-item">
-                                <span class="stat-value">1.26</span>
-                                <span class="stat-label">K/D</span>
-                            </div>
-                            <div class="stat-item">
-                                <span class="stat-value">81%</span>
-                                <span class="stat-label">First Kill Rate</span>
-                            </div>
-                            <div class="stat-item">
-                                <span class="stat-value">88%</span>
-                                <span class="stat-label">AWP Accuracy</span>
-                            </div>
+                            <span class="stat">1.24 K/D</span>
+                            <span class="stat">79% First Kill Rate</span>
+                            <span class="stat">86% AWP Accuracy</span>
                         </div>
+                    </div>
+                    <div class="click-indicator">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M7 17L17 7M17 7H7M17 7V17"/>
+                        </svg>
+                        View Stats
                     </div>
                 </div>
 
